[package]
name = "pong"
version = "0.0.1"
authors = ["Nikita Krupitskas <krupitskaz@gmail.com>"]
edition = "2018"

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"

[lib]
path = "src/lib.rs"
name = "pong_lib"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "pong_pc"
path = "src/pc_main.rs"
