[package]
name = "pong"
version = "0.0.1"
authors = ["Nikita Krupitskas <krupitskaz@gmail.com>"]
edition = "2018"

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
jni = "0.21"
image = "0.24"
num-complex = "0.4"

[lib]
path = "src/lib.rs"
name = "pong_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "pong_pc"
path = "src/pc_main.rs"
